# vulkan-matmul

./: CMakeLists.txt  build_power8.sh  ggml-gpu-offload-rocm.h  ggml-gpu-offload-vulkan.h  matmul.comp  rocm_build.sh  rocm_matmul_server.cpp  server.cpp  test_client.py  vk_bench.py
